Made Design Changes as per client's request
Changes containers background color to white, edited text as per client's request.

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 <div id = "courses" class = "container container-section-body">
 		<div class = "row">
 			<div class = "col-xl-12 col-lg-12">
-			<h1>Online Courses Available January 2020 </h1>
-			<p class = "text-center"><span style = "color:#457ABF;">O</span><span style = "color:#D00505;">D</span><span style = "color:#f0b400">P</span>, Inc. Courses & Prices:</p>
+			
+			<h1 class = "text-center"><span style = "color:#457ABF;">O</span><span style = "color:#D00505;">D</span><span style = "color:#f0b400">P</span>, Inc. Courses & Prices:</h1>
 			<p class = "text-center">(Click on course link for complete description of the courses)</p>
 			<img id = "flowChart" class = "img-responsive center-block" src="img/newFlow.jpg" alt ="courses flow chart">
 
@@ -212,9 +212,7 @@
 					</tr>
 			</tbody>
 		</table>
-		<p class = "text-center"><a href = "https://www.linkedin.com/company/online-developer-plus/about/?viewAsMember=true" target = "_blank">
-		Linkedin Company Home Page</a></p>
-
+		
 		<p class = text-center>All courses provide instructors’ support with answering questions via email.  A special 
 		file will be posted containing FAQs (frequently asked questions) on the course description page.</p>
 
@@ -222,9 +220,7 @@
 		<p class = "text-center">Special online software that provides an instructor’s voice to a Microsoft PowerPoint
 		 slide shows</p>
 		 <p class = "text-center">Classes are taken online using a Desktop PC with speakers or Laptop PC</p>
-		 <p class = "text-center"><span style = "font-weight:bold">Sales Information:</span> 425.305.8155 or <a href="mailto:jesicasartell@gmail.com?subject=Request For Sales Information About OnDevPlus" title="Send Email">jesicasartell@gmail.com</a></p>
-		 <p class = "text-center"><span style = "font-weight:bold">General Information:</span>  <a href="mailto:ondevplus@gmail.com?subject=Request General Information About OnDevPlus" title="Send Email">jesicasartell@gmail.com</a></p>
-
+		 <p class = "text-center"><span style = "font-weight:bold">Sales and Information:</span> 425.305.8155 or <a href="mailto:jesicasartell@gmail.com?subject=Request For Sales Information About OnDevPlus" title="Send Email">jesicasartell@gmail.com</a></p>
 	</div>
 </div><!-- end courses-->
 
@@ -244,7 +240,7 @@
 			<h2>Mark Kembel - Founder and CEO</h2>
 			
 			<p>Founder and CEO.  He has owned interTest.com for seven years selling and marketing Web Development and 
-			Software Testing courses. I foresee a big demand for Artificial Intelligence, C# Programmers, Software Test
+			Software Testing courses. I foresee a big demand for Artificial Intelligence, Python Programmers, Software Test
 			Development Engineers and Program Managers. I have 7 years’ experience in the technology training business 
 			and have trained hundreds of software testers for the Volt Microsoft account. Mark also tested Windows 
 			2.0 & 3.0 printing for 3 years and later managed Windows 95 printer testing for over 3 years at Microsoft.
