--- a/sdte.html
+++ b/sdte.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Online Developer Plus, Inc.</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,12 +9,13 @@
 	<meta name="description" content="Mark Kembel, Online Developer Plus, Inc.">
 	<meta name="keywords" content="online technical training, online .NET programming training, online C# programming training, online Program management training,
 	online programming training, online website development training, online software Testing training, online HTML5 training, online JavaScript training">
-	<meta name="author" content="Brian Kidd">
-	
-    <title>ODP</title>
+  <meta name="author" content="Brian Kidd">
+  
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap -->
+    <link href="css/bootstrap.css" rel="stylesheet">
 	<!--Custom Stylesheet-->
 	<link href = "css/custom.css" rel = "stylesheet">
 	<!-- fonts -->
@@ -29,6 +31,8 @@
     <![endif]-->
   </head>
   <body>
+      <div id = "pageContainer">
+          <div id = "contentWrap">
   <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -41,9 +45,10 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-			<li class="active nav-tab home-tab"><a href="index.html">Home</a></li>
-			<li class = "nav-tab"><a href="index.html#courses">Courses</a></li>
-			<li class = "nav-tab"><a href="index.html.#staff">Staff</a></li>
+          <li class = "nav-tab"><a href="index.html">Home</a></li>
+          <li class = "active nav-tab home-tab"><a href="index.html#courses">Courses</a></li>
+          <li class = "nav-tab"><a href="index.html#staff">Staff</a></li>
+          <li class = "nav-tab"><a href="enrollment.html">Enrollment</a></li>
       </ul>
     </div>
   </div>
@@ -72,7 +77,7 @@
 			<div class = "col-xl-12 col-lg-12">
                     <h1>Software Test Development Engineer</h1>
 			<p>The Software Test Development Engineer course is divided into seven main topics.  The first lessons cover
-             black box testing otherwise know as User Interface Testing. This course is very popular as it has several
+             black box testing otherwise known as User Interface Testing. This course is very popular as it has several
             tasks that both the Programmer and Program Manager deal with such as scheduling milestones for both testing
             and the developer. </p>
             <h2 class = "course-header">Lesson Topics:</h2>
@@ -137,22 +142,23 @@
 	
 	/*script to pin footer to bottom of website */
 	
-	$(document).ready(function() {
+	// $(document).ready(function() {
 
-	   var docHeight = $(window).height();
-	   var footerHeight = $('#footer').height();
-	   var footerTop = $('#footer').position().top + footerHeight;
+	//    var docHeight = $(window).height();
+	//    var footerHeight = $('#footer').height();
+	//    var footerTop = $('#footer').position().top + footerHeight;
 
-	   if (footerTop < docHeight) {
-		$('#footer').css('margin-top', 10+ (docHeight - footerTop) + 'px');
-	}
-  });
+	//    if (footerTop < docHeight) {
+	// 	$('#footer').css('margin-top', 10+ (docHeight - footerTop) + 'px');
+	// }
+  // });
 
 </script>
+    </div><!--end containerWrap id-->
+</div><!--end pageContainer id-->	
 	
 <div id ="footer">
-	Online Developer Plus, Inc. | &copy; <script type="text/javascript">document.write(new Date().getFullYear());
-	</script> | All Rights Reserved
+    Online Developer Plus, Inc. | &copy; 2019 - 2022 | All Rights Reserved
 </div>
 		
 </body>
