complete ODP update

--- a/ai.html
+++ b/ai.html
@@ -49,6 +49,8 @@
           <li class = "active nav-tab home-tab"><a href="index.html#courses">Courses</a></li>
           <li class = "nav-tab"><a href="index.html#staff">Staff</a></li>
           <li class = "nav-tab"><a href="enrollment.html">Enrollment</a></li>
+          <li class = "nav-tab"><a href="RecruitersReferral.html">Recruiter's Referral</a></li>
+          <li class = "nav-tab"><a href="seminars.php">Seminar</a></li>
       </ul>
     </div>
   </div>
@@ -83,10 +85,10 @@
             <p>Our class will cover Artificial Intelligence examples in real life, define two main types of Machine 
             Learning which is Supervised and Unsupervised.  Also defines Deep Learning. The AI course will cover what 
             the Data Science team does and what they need to know. </p>
-            <p>Python with Advanced AI programming course covers Artificial Intelligence and other advanced fields of 
-            Computer Science which includes Libraries used to define charting. Python had deep focus on code readability & 
-            this class will teach you python from basics to Machine Learning. Course includes an example of Machine Learning 
-            and Data Science using Jupyter Notebooks. </p>
+            <p>Python Libraries & Machine Learning course covers Artificial Intelligence and other advanced fields of
+            Computer Science which includes Python Libraries used to define charting. Python had deep focus on code 
+            readability & this class will teach Machine Learning. Course includes an example of Machine Learning and Data 
+            Science using Jupyter Notebooks.</p>
 		</div>
     </div>
     <div class = "col-xl-12 col-lg-12">
