--- a/bpython.html
+++ b/bpython.html
@@ -45,10 +45,12 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-			<li class="nav-tab"><a href="index.html">Home</a></li>
-			<li class = "active nav-tab home-tab"><a href="index.html#courses">Courses</a></li>
-      <li class = "nav-tab"><a href="index.html#staff">Staff</a></li>
-      <li class = "nav-tab"><a href="enrollment.html">Enrollment</a></li>
+          <li class="nav-tab"><a href="index.html">Home</a></li>
+          <li class = "active nav-tab home-tab"><a href="index.html#courses">Courses</a></li>
+          <li class = "nav-tab"><a href="index.html#staff">Staff</a></li>
+          <li class = "nav-tab"><a href="enrollment.html">Enrollment</a></li>
+          <li class = "nav-tab"><a href="RecruitersReferral.html">Recruiter's Referral</a></li>
+          <li class = "nav-tab"><a href="seminars.php">Seminar</a></li>
       </ul>
     </div>
   </div>
@@ -80,8 +82,8 @@
              training will cover some of the basic syntax with some examples that segue into other uses that involve artificial
             intelligence and data science.   The course will give a sample involving a csv file and serve as an excellent 
             launching point into more advanced Python educational opportunities. Python Unit Testing is covered for the Software 
-            Testing students. Also, this course is a requirement for the Software Test Development Engineer, Program Manager and
-            the Python and Advance AI course.</p>
+            Testing students. Also, this course is a requirement for the Software Test Development Engineer and Program Manager 
+            courses. Recommended for the Introduction to Artificial Intelligence course.</p>
 		</div>
 	</div>
 </div>
