--- a/enrollment.html
+++ b/enrollment.html
@@ -44,7 +44,10 @@
 							<li class="active nav-tab home-tab">
 								<a href="enrollment.html">Enrollment</a>
 							</li>
+							<li class = "nav-tab"><a href="RecruitersReferral.html">Recruiter's Referral</a></li>
+							<li class = "nav-tab"><a href="seminars.php">Seminar</a></li>
 						</ul>
+					
 					</div>
 				</div>
 			</nav>
@@ -92,11 +95,12 @@
 									<td class="table-data-align-right">Available Early 2020</td>
 								</tr>
 								<tr>
-									<td>Python & Advanced Artificial Intelligence</td>
+									<td>Python Libraries and Machine Learning</td>
 									<td class="table-data-align-right">Available Early 2020</td>
 								</tr>
 							</tbody>
 						</table>
+						<h2 style = "color:#457ABF; font-weight:bold;">For more information about the courses go to the free <a style = "text-decoration:underline; background-color:#F2DC05;padding:5px;" href = "seminars.php"> seminar page.</a></h2>
 						<h3 class="text-center"><strong>Order Courses</strong></h3>
 						<p class="text-center"><span style="color:black; font-weight:bold;">Call 425.305.8155 or email ODPlusenroll@gmail.com<br>
 						Online Developer Plus Inc.<br>
