--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 			<li class = "nav-tab"><a href="#courses">Courses</a></li>
 			<li class = "nav-tab"><a href="#staff">Staff</a></li>
 			<li class = "nav-tab"><a href="enrollment.html">Enrollment</a></li>
+			<li class = "nav-tab"><a href="RecruitersReferral.html">Recruiter's Referral</a></li>
+			<li class = "nav-tab"><a href="seminars.php">Seminar</a></li>
 			<!--<li class = "nav-tab"><a href="tests.php">Final Tests</a></li>-->
       </ul>
     </div>
@@ -112,7 +114,7 @@
 			
 			<h1 class = "text-center"><span style = "color:#457ABF;">O</span><span style = "color:#D00505;">D</span><span style = "color:#f0b400">P</span>, Inc. Courses & Prices:</h1>
 			<p class = "text-center">(Click on course link for complete description of the courses)</p>
-			<img id = "flowChart" class = "img-responsive center-block" src="img/newFlow.jpg" alt ="courses flow chart">
+			<img id = "flowChart" class = "img-responsive center-block" src="img/newFlow.png" alt ="courses flow chart">
 
 	<table class="table course-descriptions">
     <thead>
@@ -147,12 +149,12 @@
 			<td>$1,995.00</td>
 		</tr>
 		<tr>
-			<td>Python with Advanced AI</td>
-			<td>$2,495.00</td>
+			<td><a href = "pythlibmachln.html">Python Libraries and Machine Learning</a></td>
+			<td>Included in Package</td>
 		</tr>
 		<tr>
 			<td class = "text-right"><span style = "color:#000000;">Tuition Package</span></td>
-			<td><span style = "color:#000000;">$3,995.00</span></td>
+			<td><span style = "color:#000000;">$2,495.00</span></td>
 		</tr>
 		<tr>
 			<td><a href = "pm.html">Program Manager</a></td>
@@ -183,12 +185,12 @@
 			<td>$1,995.00</td>
 		</tr>
 		<tr>
-			<td>Python with Advanced AI</td>
-			<td>$2,495.00</td>
+			<td><a href = "pythlibmachln.html">Python Libraries and Machine Learning</a></td>
+			<td>Included in Package</td>
 		</tr>
 		<tr>
 			<td class = "text-right"><span style = "color:#000000;">Tuition Package</span></td>
-			<td><span style = "color:#000000;">$5,995.00</span></td>
+			<td><span style = "color:#000000;">$4,595.00</span></td>
 		</tr>
     </tbody>
   </table>
@@ -223,8 +225,8 @@
 			</tbody>
 		</table>
 		
-		<p class = text-center>All courses provide instructors’ support with answering questions.
-		Students scoring 80% or better receive a “Certificate of Completion” for each course.</p>
+		<p class = text-center>For more information about the courses go to the free 
+			<a href = "seminars.php">seminar page.</a></p>
 		<p class = "text-center">Payment, We accept:</p> <img class = "center-block" src="https://www.merchantequip.com/image/?logos=v|m|a|d&height=64" 
 		alt="Merchant Equipment Store Credit Card Logos"/>
 		<p class = "text-center">Please see our <a href = "enrollment.html">enrollment page</a> for more information.</p>
@@ -254,12 +256,24 @@
 			
 			<p>Founder and CEO.  He has owned interTest.com for seven years selling and marketing Web Development and 
 			Software Testing courses. I foresee a big demand for Artificial Intelligence, Python Programmers, Software Test
-			Development Engineers and Program Managers. I have 7 years’ experience in the technology training business 
+			Development Engineers and Program Managers. I have seven years experience in the technology training business 
 			and have trained hundreds of software testers for the Volt Microsoft account. Mark also tested Windows 
 			2.0 & 3.0 printing for 3 years and later managed Windows 95 printer testing for over 3 years at Microsoft.
 			Our online program allows us to train and test students skills over the internet.</p>
 			
 			<h2 class= "linkedIn"><a href = "https://www.linkedin.com/in/mark-kembel-84007377/" target="_blank">Mark Kembel LinkedIn <i class= "fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h2>
+			<hr>
+			<div class = "col-xl-12 col-lg-12 wanted">
+				<h1>Help Wanted:</h1>
+				<p><span style = "font-weight:bold;font-size:1.25em;">Business Development Manager</span> to call colleges
+					 to sign up for our college program and recruiting firms selling our online courses.  Perfect job for 
+					 a technical recruiter.  Included is $50K of stock options that vest in three years.  Contact Mark Kembel 
+					 at <a href="mailto:markkembel@ondevplus.com?Subject=Businsess%20Development%20Manager" target="_top"> 
+						 markkembel@ondevplus.com</a> for information.
+					 Work from home will supply laptop and iPhone.  Good job for women with kids. 
+					 <a href = "http://www.ondevplus.com" target = "_blank">www.ondevplus.com</a>.
+				</p>
+			</div>
 			<hr>
 			<h2>Randy Gerl - Executive Technical Assistant</h2>
 			
@@ -274,7 +288,7 @@
 			<hr>
 			<h2>Brian Kidd - Web Developer</h2>
 			
-			<p>Brian is a Web and Multimedia Developer who for the last 6 years has enthusiastically applied his 
+			<p>Brian is a Web and Multimedia Developer who for the last six years has enthusiastically applied his 
 			developing and design skills to meet all of his clients’ needs, including Online Developer Plus, Inc. Besides web 
 			developing, Brian's professional background includes journalism, music production, data entry, sales, 
 			and corporate communications. This makes him an approachable developer and communicator
