--- a/pm.html
+++ b/pm.html
@@ -49,6 +49,8 @@
           <li class = "active nav-tab home-tab"><a href="index.html#courses">Courses</a></li>
           <li class = "nav-tab"><a href="index.html#staff">Staff</a></li>
           <li class = "nav-tab"><a href="enrollment.html">Enrollment</a></li>
+          <li class = "nav-tab"><a href="RecruitersReferral.html">Recruiter's Referral</a></li>
+          <li class = "nav-tab"><a href="seminars.php">Seminar</a></li>
       </ul>
     </div>
   </div>
