--- a/sdte.html
+++ b/sdte.html
@@ -49,6 +49,8 @@
           <li class = "active nav-tab home-tab"><a href="index.html#courses">Courses</a></li>
           <li class = "nav-tab"><a href="index.html#staff">Staff</a></li>
           <li class = "nav-tab"><a href="enrollment.html">Enrollment</a></li>
+          <li class = "nav-tab"><a href="RecruitersReferral.html">Recruiter's Referral</a></li>
+          <li class = "nav-tab"><a href="seminars.php">Seminar</a></li>
       </ul>
     </div>
   </div>
@@ -107,7 +109,7 @@
                 <li>Write detailed bug report and test plans</li>
                 <li>Work with Developers & write progress reports & Reproduce bugs found</li>
             </ul>
-			<img id = "csharpFlowChart" class = "img-responsive" src="img/csharp.jpg" alt ="courses flow chart">
+			<img id = "csharpFlowChart" class = "img-responsive" src="img/csharp.png" alt ="courses flow chart">
 		</div>
 	</div>
 </div>
